fix: alignment issue on both about section

--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,10 @@ p {
   margin: 0 0;
   padding-bottom: 50px;
 }
+.new{
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 .about-discription{
   padding-bottom: 40px;
 }
